; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_trace-event.c_trace_event__cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_trace-event.c_trace_event__cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_event = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @trace_event__cleanup(%struct.trace_event* %0) #0 {
  %2 = alloca %struct.trace_event*, align 8
  store %struct.trace_event* %0, %struct.trace_event** %2, align 8
  %3 = load %struct.trace_event*, %struct.trace_event** %2, align 8
  %4 = getelementptr inbounds %struct.trace_event, %struct.trace_event* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.trace_event*, %struct.trace_event** %2, align 8
  %7 = getelementptr inbounds %struct.trace_event, %struct.trace_event* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @tep_unload_plugins(i32 %5, i32 %8)
  %10 = load %struct.trace_event*, %struct.trace_event** %2, align 8
  %11 = getelementptr inbounds %struct.trace_event, %struct.trace_event* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @tep_free(i32 %12)
  ret void
}

declare dso_local i32 @tep_unload_plugins(i32, i32) #1

declare dso_local i32 @tep_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
